[Documents][Areabrick] Header Teaser - fix markup & editmode visibility #103

--- a/web/static/css/editmode.css
+++ b/web/static/css/editmode.css
@@ -90,3 +90,7 @@ h5 {
     top: 15vh;
     text-shadow: rgb(0, 0, 0) 0px 0px 5px;
 }
+
+.jumbotron .container .btn {
+    margin: 2em 1.5em 0 0;
+}
